# TireStorageManager

./: .gitignore  CHANGELOG.md  Install-TireStorageManagerService.ps1  README.md  TSM-Installer.spec  TSMInstaller.py  TireStorageManager.spec  app.py  backup_manager.py  config.py  db.py  installer_logic.py  latest.json  models.py  positions.py  pyproject.toml  quick_disable.bat  quick_disable.py  requirements-test.txt  requirements.txt  routes.py  run.py  server.py  start_app.bat  tire_storage.db  updater.py  utils.py  wheels_app.bat  wheels_manager.py  wsgi.py
.github/workflows/: build.yaml  bump-version.yml  ci.yaml  ci.yml
app/: config.py  main.py
app/controller/: app_controller.py
app/model/: db.py  entities.py  repository.py
app/utils/: auto_update.py  excel_io.py  i18n.py  locking.py  scheduler.py
app/view/: gui.py
installer/: TSM-Installer.spec  TSMInstaller.py  __init__.py  installer_i18n.py  installer_logic.py
static/css/: style.css
static/js/: script.js
templates/: backups.html  base.html  delete_confirm.html  impressum.html  index.html  inventory_print.html  positions.html  settings.html  settings_positions.html  wheelset_form.html  wheelsets_list.html
tests/: conftest.py  test_app.py  test_app_controller.py  test_backup_manager.py  test_bump_version.py  test_changelog.py  test_config.py  test_db_interactions.py  test_detect_bump_type.py  test_diagnostic_tool.py  test_i18n.py  test_installer_logic.py  test_installer_smoke.py  test_models.py  test_positions.py  test_routes.py  test_scheduled_restart.py  test_search_sort_filter.py  test_self_update.py  test_tire_details.py  test_tire_settings.py  test_update_flow.py  test_utils.py  test_visible_fields_renewal.py
tools/: bump_version.py  create_codesign_cert.ps1  detect_bump_type.py  dev.sh  extract_changelog.py  generate_icons.py  get_version.py  install_codesign_cert.ps1  quick_disable.py  release_acceptance_test.py  smoke_test.py  smoke_test_installer.py  updater.py
tools/rat/: helpers.py  phase1.py  phase2.py  phase345.py
tsm/: app.py  backup_manager.py  db.py  i18n.py  models.py  positions.py  routes.py  self_update.py  utils.py
