[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-storage-manager"
version = "0.0.0"  # your runtime version still in config.py
description = "Tire Storage Manager"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsm*"]