[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-storage-manager"
version = "1.6.1"
description = "Lightweight tire/wheel storage management web app for workshops"
requires-python = ">=3.12"
dependencies = [
    "Flask>=2.3,<3.0",
    "Flask-Babel>=3.0,<5.0",
    "SQLAlchemy>=2.0,<3.0",
    "waitress==3.0.2",
    "pyinstaller>=6.0,<7.0",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsm*", "installer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: real OS / EXE tests (require Windows + admin + built EXE)",
]

# ────────────────────────────────────────────────────────────────
# ruff – linting (source only; tests and tools are excluded in CI)
# ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade  B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E203",   # whitespace before ':' (conflicts with black-style slices)
    "E221",   # multiple spaces before operator (alignment is intentional)
    "E501",   # line too long (lengths ≤ line-length pass; ruff uses line-length)
    "B008",   # do not perform function call in default argument (Flask patterns)
]

[tool.ruff.lint.per-file-ignores]
# tests are excluded from CI linting and suppressed locally to avoid noise.
"tests/**" = ["ALL"]
# dev/CI-only tooling scripts – not production code, skip all rules locally.
"tools/bump_version.py"          = ["ALL"]
"tools/extract_changelog.py"     = ["ALL"]
"tools/generate_icons.py"        = ["ALL"]
"tools/get_version.py"           = ["ALL"]
"tools/quick_disable.py"         = ["ALL"]
"tools/release_acceptance_test.py" = ["ALL"]
"tools/smoke_test.py"            = ["ALL"]
"tools/smoke_test_installer.py"  = ["ALL"]
# tools/updater.py is intentionally NOT listed here: it is production
# code (the auto-updater for deployed installations) and must be linted
# like any other source file.